--- a/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -24,8 +24,8 @@ podcasts.</p>
 
 
 {% for podcast in podcasts %}
-    <li><a href="{{ podcast.get_absolute_url }}" class="{{ podcast.medium }}">{{ podcast.title }} ({{ podcast.medium }})
-    <br /><small>{{ podcast.description }}</small></a></li>
+    <li><a href="{{ podcast.get_absolute_url }}"><span class="{{ podcast.medium }}">{{ podcast.title }} ({{ podcast.medium }})
+    <br /><small>{{ podcast.description }}</small></span></a></li>
 {% endfor %}
 		</ul>
 </div>
