Further enhancements to library search.

--- a/mobile_portal/mobile_portal/site-media/css/breadcrumbs.css
+++ b/mobile_portal/mobile_portal/site-media/css/breadcrumbs.css
@@ -79,6 +79,10 @@ h1.results-header {
     background-image:url('../png/results-bc.png');
 }
 
+h1.z3950-header {
+    background-image:url('../png/z3950-bc.png');
+}
+
 h1.rss-header {
     background-image:url('../png/rss-bc.png');
 }
