--- a/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/nearby_detail.xhtml
@@ -57,4 +57,17 @@
 </ul>
 </div>
 
+{% ifequal entity_type.source "osm" %}
+<div class="section-nopad">
+<h2 class="section-header">Note</h2>
+
+<div class="list-note bottom">
+    This information is provided courtesy of
+    <a href="http://www.openstreetmap.org/">OpenStreetMap</a> under a
+    <a href="http://creativecommons.org/licenses/by-sa/2.0/">Creative Commons Attribution-ShareAlike 2.0</a> license.<br/>
+    Oxford University provides this information without warranty. For further
+    details, see our <a href="/legal/">legal information</a>.
+</div>
+{% endifequal %}
+
 {% endblock %}
