--- a/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -53,7 +53,9 @@
 </div>
 {% endif %}
 
-<div style="background-image:url('{% map_url entity.location %}'); background-repeat:no-repeat; background-position: center center; height:{{ device.max_image_height }}px"> </div>
+<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ device.max_image_height }}px">
+{% include "maps/map_elements.xhtml" %}
+</div>
 
 <ul class="ml">
     <li>
