Added explanation to results releases.

--- a/mobile_portal/mobile_portal/site-media/css/classes/touch.css
+++ b/mobile_portal/mobile_portal/site-media/css/classes/touch.css
@@ -133,7 +133,7 @@ div.list-section, div.section-nopad {
 }
 
 div.section-content {
-    margin:8px;
+    padding:8px;
 }
 
 h2.section-header, div.list-footer {
