Changed wording ever so slightly to suggest that this is a list, not a menu.

--- a/mobile_portal/mobile_portal/templates/results/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/results/index.xhtml
@@ -9,7 +9,7 @@
 <div class="section-nopad">
     <h2 class="section-header">About results releases</h2>
     <div class="section-content">
-        This page shows the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.
+        This page lists the last twenty schools to have had results released. You can check your results using Student Self-Service from a desktop browser.
     </div>
 </div>
 
