Fixed colour issue when CSS inherited to osm-license.

--- a/mobile_portal/mobile_portal/site-media/css/base.css
+++ b/mobile_portal/mobile_portal/site-media/css/base.css
@@ -164,6 +164,7 @@ div.osm-license {
     text-align:right;
     background-color: rgba(255, 255, 255, 0.5);
     padding:2px;
+    color: #000000;
 }
 
 /*
