Library search improvements

--- a/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
+++ b/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
@@ -29,6 +29,7 @@
         {{ item }}
         <br/><small><strong>Author:</strong> {{ item.author }}</small>
         <br/><small><strong>Publisher:</strong> {{ item.publisher }}</small>
+        <br/><small><strong>Copies:</strong> {{ item.copies }}</small>
     </a>
 </li>
 {% endfor %}
