--- a/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
+++ b/mobile_portal/mobile_portal/site-media/css/devices/apple_iphone.css
@@ -1,2 +1,13 @@
 
 
+body {
+    margin: 0;
+    font-family: "Liberation Sans", sans-serif;
+    font-size:9pt;
+    /*background-color:#98a1ac;*/
+	background-image:url('../png/stripes.png');
+    /*overflow:hidden;*/
+    -webkit-text-size-adjust: none;
+
+    
+}
