--- a/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -1,3 +1,31 @@
-<h2>Hello!</h2>
+<div class="section-nopad">
+    <h2 class="section-header">About this site</h2>
 
-<p>Stuff</p>
+    <div class="section-content">
+    The Oxford Mobile Portal was produced as part of the
+    <a href="http://erewhon.oucs.ox.ac.uk/">Erewhon Project</a>, a
+    <a href="http://www.jisc.ac.uk/">JISC</a>-funded project to explore the
+    provision of location-aware applications and adaption of Weblearn for use on
+    mobile devices.
+    </div>
+</div>
+
+<div class="section-nopad">
+    <h2 class="section-header">Credits</h2>
+
+    <div class="section-content">
+        <p>
+        The Erewhon team would like to thank the following organisations
+        for providing the data used in the Portal:
+        </p>
+        
+        <dl>
+            <dt>Oxontime</dt>
+            <dt>Edina</dt>
+            <dt>OpenStreetMap</dt>
+            <dt>Oxford University Estates Department</dt>
+            <dt>Oxford University Library Services</dt>
+        </dl>
+    </div>
+</div>
+
