--- a/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -11,7 +11,8 @@
 
 {% block header %}
     <div id="title">
-        <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/>
+<!--        <img src="{{ MEDIA_URL }}png/headers/{{ device.resolution_width|header_width }}.png" alt="Mobile Oxford"/> -->
+        <img src="{{ MEDIA_URL }}png/header-logo.png" alt="Mobile Oxford"/>
     </div>
 {% endblock %}
 
@@ -34,10 +35,16 @@
 {#            <li><a href="/help/">Using this site</a></li>#}
 {#            <li><a href="/customise/">Customise this page</a></li>#}
             <li class="top"><a href="{% url core_update_location %}">Location-finding preferences</a></li>
+            <li><a href="{% url core_static_about %}">About this site</a></li>
 {#            <li><a href="/legal/">Legal</a></li>#}
 
         </ul>
     </div>
+    
+    <div class="section-nopad">
+        <img src="{{ MEDIA_URL }}gif/brandmark.gif" alt="Mobile Oxford" style="float:right;"/>
+    </div>
+
     
     
 {% if user.is_superuser %}
