Add library icon to front page.

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -56,3 +56,7 @@ li#menu-results {
     background-image:url('../../png/results.png');
 }
 
+li#menu-library {
+    background-image:url('../../png/library.png');
+}
+
