Fixed library search icon.

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -56,7 +56,7 @@ li#menu-results {
     background-image:url('../../png/results.png');
 }
 
-li#menu-library {
+li#menu-z3950 {
     background-image:url('../../png/library.png');
 }
 
