Sorting out png for library searches/ z3950

--- a/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
+++ b/mobile_portal/mobile_portal/site-media/css/core/index-buttons.css
@@ -57,6 +57,6 @@ li#menu-results {
 }
 
 li#menu-z3950 {
-    background-image:url('../../png/library.png');
+    background-image:url('../../png/z3950.png');
 }
 
